--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="layout">
     <main class="layout__main">
-        <router-outlet></router-outlet>
+        <app-menu [data]="data" [isRootNode]="true"></app-menu>
     </main>
 </div>
